# cicliminds-lib

./: setup.cfg
cicliminds_lib/mask/: mask.py
cicliminds_lib/query/: files.py
