[metadata]
name = cicliminds-lib
version = 0.8.2
author = profesorpaiche
author_email = profe.paiche@gmail.com
description = Utilities for analysing and visualizing climate indices data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/profesorpaiche/cicliminds-lib
project_urls =
    Bug Tracker = https://github.com/profesorpaiche/cicliminds-lib/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    netCDF4==1.5.*
    numpy==1.22.*
    scipy==1.6.*
    xarray==0.18.*
    xhistogram==0.3.*
    pandas==1.2.*
    regionmask>=0.9.*
    shapely==1.7.*
    matplotlib==3.5.*
    cartopy==0.20.*
    importlib-resources==5.*;python_version<'3.9'
